fixed images overlapping on mobile

--- a/Mushrooms/styles.css
+++ b/Mushrooms/styles.css
@@ -142,6 +142,10 @@ canvas {
     display: none;
   }
 
+  .gallery {
+    column-count: 3;
+  }
+
 }
 
 .show {
